--- a/css/style.less
+++ b/css/style.less
@@ -1,7 +1,7 @@
 // out: ./style.css, compress: true, sourceMap: false
 @import "normalize.css";
 @import "rem.less";
-//@import "fontello.css";
+@import "https://cdn.jsdelivr.net/npm/boxicons@1.7.1/css/boxicons.min.css";
 
 
 
@@ -28,14 +28,8 @@
 @header-height: 100px;
 
 /* color */
+@theme-color:#0075bc;
 
-@main:#0075bc;
-@sub01:#333;
-@sub02:#333;
-@sub03:#333;
-@white:#fff;
-@black:#000;
-@gray:#999;
 
 /* mixin */
 .bold {
@@ -148,7 +142,7 @@
     width: 100%;
 
     a {
-        background: @white;
+        background: #fff;
     }
 
     a,
@@ -198,8 +192,8 @@
 
     .active,
     strong {
-        background: @main;
-        color: @white;
+        background: @theme-color;
+        color: #fff;
         .normal;
         border-color: transparent;
     }
@@ -371,26 +365,6 @@ html {
     min-height: 100%;
 }
 
-@media (max-width:360px) {
-    html {
-        font-size: 14px;
-    }
-}
-@media (min-width:361px) and (max-width:480px) {
-    html {
-        font-size: 18px;
-    }
-}
-@media (min-width:481px) {
-    html {
-        font-size: 22px;
-    }
-}
-@media (min-width:1200px) {
-    html {
-        font-size: 14px;
-    }
-}
 
 body {
     font-family: @myfont, "Malgun Gothic", "apple sd gothic neo", sans-serif;
@@ -422,16 +396,7 @@ body {
 
 body {
 
-    .container {
-        .container(100%);
-        .left;
-        .top;
-        .rem(padding, 0 10);
-        @media all and (min-width: 1200px) {
-            .container(1200px);
-            padding: 0;
-        }
-    }
+    min-width: 1200px;
 
     &.cmslogin {
         .mapazero;
@@ -450,35 +415,30 @@ body {
             -moz-transform: translateX(-50%) translateY(-50%);
             -webkit-transform: translateX(-50%) translateY(-50%);
             transform: translateX(-50%) translateY(-50%);
-            background-size: cover; 
+            background-size: cover;
         }
 
         fieldset {
-            border:none;
-            padding:0;
-            .rem(width, 400);
-            .remCalc(max-width, 40);
-            .rem(padding, 30); 
-            .rem(margin, 80 auto 0);
-            background:rgba(0,0,0,0.5);
-            .rem(border-radius, 30);
+            border: none;
+            padding: 0;
+            width:400px;
+            padding:30px;
+            margin: 28vh auto 0;
+            background: rgba(0,0,0,0.7);
+            border-radius:40px;
             .center;
 
-            @media all and (min-width: 1200px) {
-            margin-top:28vh;
-            }
-
             h1 {
+                .zero;
                 .block;
-                .rem(font-size, 26);
-                .rem(margin, 10 0 30);
-                .bold;
-                color:@white;
+                width:220px;
+                height:86px;
+                margin:0 auto 20px;
+                
+                background:url("../images/logo.svg") no-repeat center / 100% auto;
 
                 small {
-                    .block;
-                    .rem(padding, 6 0 0);
-                    .normal;
+                    .none
                 }
             }
 
@@ -487,39 +447,404 @@ body {
             }
 
             input {
-                width:100%;
-                border:none;
-                .rem(padding, 0 10);
-                .rem(height, 40);
-                .rem(margin, 0);
-                background:#000;
-                color:#ccc;
+                width: 100%;
+                border: none;
+                padding:0 10px;
+                .center;
+                height:48px;
+                margin:0 0 6px;
+                background: #333;
+                color: #eee;
+                font-size:18px;
+                border-radius:24px;
+                border-bottom:3px solid rgba(0,0,0,0.2);
 
-                &[type="text"] {
-                    margin-bottom:1px;
-                }
-
-                @media all and (min-width: 1200px) {
-                    font-size:16px;
-                    height:48px;
-                }
             }
 
             button {
-                width:100%;
-                border:1px solid #2e6da4;
-                .rem(padding, 0 10);
-                .rem(height, 40);
-                .rem(margin, 0);
-                color:@white;
-                background:#337ab7;
-                .rem(border-radius, 0 0 16 16);
+                width: 100%;
+                border: 1px solid #2e6da4;
+                padding:0 10px;
+                margin:0;
+                font-size: 18px;
+                height: 52px;
+                color: #fff;
+                background: #337ab7;
+                border-radius:26px;
+                border-bottom:3px solid rgba(0,0,0,0.2);
 
-                @media all and (min-width: 1200px) {
-                    font-size:18px;
-                    height:52px;
+            }
+        }
+    }
+
+    &.cmsMain {
+        .relative;
+        padding: 0 0 0 180px;
+        background: #252526;
+
+        &::before {
+            content: "";
+            .block;
+            .fixed;
+            left: 181px;
+            width: 1px;
+            background: #191919;
+            top: 0;
+            bottom: 0;
+        }
+        &::after {
+            content: "";
+            .block;
+            .fixed;
+            left: 182px;
+            width: 1px;
+            background: #2b2b2b;
+            top: 0;
+            bottom: 0;
+
+        }
+
+        header {
+            .relative;
+            background: #252526;
+            line-height: 62px;
+
+            h1 {
+                margin: 0;
+                padding: 0 20px;
+                .normal;
+
+                a {
+                    color: #fff;
+                    font-size: 26px;
+
+                    small {
+                        font-size: 17px;
+                        color: #1ba8fe;
+                        .top;
+                        margin: 0 0 0 10px;
+                    }
                 }
             }
+
+            p.welcome {
+                .mapazero;
+                .absolute;
+                right:170px;
+                top:0;
+                color:#bbb;
+
+                strong {
+                    .normal;
+                    color:#fff;
+                    margin:0 4px 0 0;
+                }
+
+                u {
+                    text-decoration:none;
+                    color:#62c987;
+                    padding:0 0 0 10px;
+                }
+            }
+
+            button.logout {
+                .absolute;
+                line-height: 1;
+                right: 20px;
+                height: 42px;
+                top: 10px;
+                border: 1px solid #2b2b2b;
+                padding: 0 20px;
+                font-size: 17px;
+                background: @theme-color;
+                color: #fff;
+
+                i {
+                    margin: 0 4px 0 0;
+                }
+
+            }
+        }
+
+        aside {
+            .fixed;
+            z-index:20;
+            left: 0;
+            top: 0;
+            bottom: 0;
+            width: 180px;
+            background: #141414;
+            color: #fff;
+
+            &:after {
+                content:"";
+                .block;
+                .absolute;
+                z-index:8;
+                right:0;
+                top:0;
+                bottom:0;
+                width:10px;
+                .gradienth(rgba(0,0,0,0), rgba(0,0,0,0.2), rgba(0,0,0,0.5))
+            }
+
+            h2 {
+                .zero;
+                height:90px;
+                .mapazero;
+                background:url("../images/logo.svg") no-repeat @theme-color center / 80% auto;
+                border-bottom:6px solid rgba(0,0,0,0.2);
+            }
+
+            ul {
+                .relative;
+                z-index:10;
+                .mapazero;
+                .no-list;
+
+                li {
+                    .relative;
+
+                    h3 {
+                        .mapazero;
+
+                        a {
+                            .block;
+                            .relative;
+                            color: #aaa;
+                            font-size: 17px;
+                            padding:20px 10px;
+                            .normal;
+                            .ani();
+
+
+                            &::before {
+                                content: "";
+                                .block;
+                                .absolute;
+                                left:0;
+                                right:0;
+                                height: 1px;
+                                background: #000;
+                                bottom: 0;
+                            }
+                            &::after {
+                                content: "";
+                                .block;
+                                .absolute;
+                                left: 0;
+                                right:0;
+                                height: 1px;
+                                background: #2b2b2b;
+                                bottom: 1px;
+                            }
+
+                            i {
+                                .top;
+                                font-size: 20px;
+                                margin:0 10px 0 0;
+                                color:#fff;
+                            }
+                        }
+
+                    }
+
+                    ul {
+                        .absolute;
+                        z-index:999;
+                        width:0;
+                        top:0;
+                        left:179px;
+                        min-height:60px;
+                        .hidden;
+                        border-radius:0 10px 10px 10px;
+                        padding:0;
+                        background:#000;
+                        .ani();
+
+                        li {
+
+                            a {
+                                .block;
+                                white-space:nowrap;
+                                padding:10px 20px;
+                                font-size:16px;
+                                color:#ccc;
+                                .ani();
+
+                                &:hover {
+                                    color:#fff;
+                                    padding:10px 20px 10px 24px;
+                                }
+                            }
+                        }
+                    }
+
+                    &.active {
+                        h3 {
+                            a {
+                                background:#000;
+                                color:#fff;
+                                padding:20px 10px 20px 14px;
+                                .ani();
+                                
+                                &::before {
+                                    height:0;
+                                }
+                                
+                                &::after {
+                                    height:0;
+                                }
+
+
+                                i {
+                                    color:@theme-color;
+                                }
+                            }
+                        }
+
+                        ul {
+                            width:180px;
+                            .ani();
+                            padding:10px 0;
+                            
+                        }
+                    }
+                }
+            }
+        }
+
+        div#content {
+
+            section.tabs {
+                .zero;
+                .relative;
+                margin: 0 20px;
+                height: 43px;
+                .hidden;
+                white-space:nowrap;
+
+                &:before {
+                    content:"";
+                    .block;
+                    .absolute;
+                    z-index:8;
+                    right:0;
+                    top:0;
+                    bottom:0;
+                    width:160px;
+                    .gradienth(rgba(37,37,38,0), rgba(37,37,38,1), rgba(37,37,38,1))
+                }
+
+
+
+                input {
+                    .none;
+                }
+
+                label {
+                    .inline-block;
+                    .bottom;
+                    .relative;
+                    font-size: 14px;
+                    color: #555;
+                    background: #e4e4e4;
+                    border-radius: 5px 5px 0 0;
+                    padding: 10px 30px 10px 10px;
+                    margin: 4px 1px 0 0;
+                    width: 140px;
+                    border-top: 4px solid #999;
+                    .ellipse;
+                    .ani();
+
+                }
+                button {
+                    .zero;
+                    .absolute;
+                    .mapazero;
+                    right: 4px;
+                    top: 4px;
+                    background: none;
+                    border: none;
+                    outline: none;
+                    color: #555;
+
+                    i {
+                        font-size: 16px;
+                    }
+                }
+
+                input:checked + label {
+                    background: #fff;
+                    color: #333;
+                    border-color: @theme-color;
+                    padding: 10px 30px 14px 10px;
+                    margin: 0 1px 0 0;
+                    .ani();
+
+                    button {
+                        color: #999;
+                    }
+                }
+
+                &>button {
+                    .absolute;
+                    z-index:10;
+                    right:0;
+                    top:0;
+                    padding:0;
+                    width:38px;
+                    height:38px;
+                    line-height:38px;
+                    background:#666;
+                    border-radius:10px;
+
+                    &.prev {
+                        right:42px;
+                    }
+
+                    i {
+                        font-size:24px;
+                        color:#333;
+                        line-height:inherit;
+                    }
+
+                    &.on {
+                        background:#eee;
+                        .pointer;
+                    }
+                }
+
+            }
+
+            section.view {
+                background: #fff;
+                min-height: 300px;
+                margin: 0 20px;
+                padding:30px;
+                border-radius: 0 10px 10px 10px;
+                .drop-shadow();
+
+                h2.stitle {
+                    font-size:38px;
+                    margin:0 0 30px;
+                    padding:0 0 20px;
+                    border-bottom:2px solid #eee;
+                    color:#333;
+
+                    i {
+                        font-size:40px;
+                        margin:0 10px 0 0;
+                        color:@theme-color;
+                        .top;
+                    }
+                }
+            }
+        }
+
+        #footer {
+            color: #999;
+            padding: 20px;
         }
     }
 
