--- a/css/style.less
+++ b/css/style.less
@@ -617,138 +617,179 @@ body {
     
             }
 
-            ul {
-                .relative;
-                z-index:10;
-                .mapazero;
-                .no-list;
+            nav#main-menu {
 
-                li {
+                margin:20px 0 0;
+
+                ul {
                     .relative;
-
-                    h3 {
-                        .mapazero;
-
-                        a {
-                            .block;
-                            .relative;
-                            color: #aaa;
-                            font-size: 17px;
-                            padding:14px 10px;
-                            .normal;
-                            .ani();
-
-
-                            &::before {
-                                content: "";
-                                .block;
-                                .absolute;
-                                left:0;
-                                right:0;
-                                height: 1px;
-                                background: #000;
-                                bottom: 0;
-                            }
-                            &::after {
-                                content: "";
-                                .block;
-                                .absolute;
-                                left: 0;
-                                right:0;
-                                height: 1px;
-                                background: #2b2b2b;
-                                bottom: 1px;
-                            }
-
-                            i {
-                                .top;
-                                font-size: 20px;
-                                margin:0 10px 0 0;
-                                color:#fff;
-                            }
-                        }
-
-                    }
-
-                    ul {
-                        max-height:0;
-                        .hidden;
-                        background:#000;
-                        .ani();
-
-                        li {
-
+                    z-index:10;
+                    .mapazero;
+                    .no-list;
+    
+                    li {
+                        .relative;
+    
+                        h3 {
+                            .mapazero;
+    
                             a {
                                 .block;
-                                white-space:nowrap;
-                                padding:10px 20px 10px 24px;
-                                font-size:16px;
-                                color:#ccc;
+                                .relative;
+                                color: #aaa;
+                                font-size: 17px;
+                                padding:10px 10px;
+                                .normal;
                                 .ani();
-
-                                &:hover {
+    
+    
+                                &::before {
+                                    content: "";
+                                    .block;
+                                    .absolute;
+                                    left:0;
+                                    right:0;
+                                    height: 1px;
+                                    background: #000;
+                                    bottom: 0;
+                                }
+                                &::after {
+                                    content: "";
+                                    .block;
+                                    .absolute;
+                                    left: 0;
+                                    right:0;
+                                    height: 1px;
+                                    background: #2b2b2b;
+                                    bottom: 1px;
+                                }
+    
+                                i {
+                                    .top;
+                                    font-size: 20px;
+                                    margin:0 10px 0 0;
                                     color:#fff;
                                 }
                             }
+    
                         }
-                    }
-
-                    &.active {
-                        h3 {
-                            a {
-                                background:#000;
-                                color:#fff;
-                                .ani();
-                                
-                                &::before {
-                                    height:0;
-                                }
-                                
-                                &::after {
-                                    height:0;
-                                }
-
-
-                                i {
-                                    color:#dd792c;
-                                }
-                            }
-                        }
-
-                        ul {
-                            max-height:1000px;
-                            padding:10px;
+    
+                        &>ul {
+                            .mapazero;
+                            max-height:0;
+                            .hidden;
+                            background:#333;
                             .ani();
-                            
-                        }
-                    }
+    
+                            &>li {
+    
+                                &>a {
+                                    .block;
+                                    .relative;
+                                    white-space:nowrap;
+                                    padding:5px 10px 5px 20px;
+                                    font-size:16px;
+                                    color:#ccc;
+                                    .ani();
 
-                    &.on,
-                    &:hover {
-                        h3 {
-                            a {
-                                background:#000;
-                                color:#fff;
-                                .ani();
-                                
-                                &::before {
-                                    height:0;
+                                    &::before {
+                                        content:"-";
+                                        color:#999;
+                                        padding:0 6px 0 0;
+                                    }
+    
+                                    &:hover {
+                                        color:#fff;
+                                    }
                                 }
-                                
-                                &::after {
-                                    height:0;
-                                }
 
+                                &>ul {
+                                    .mapazero;
+                                    max-height:0;
+                                    .hidden;
+                                    background:#000;
+                                    .ani();
 
-                                i {
-                                    color:@theme-color;
+                                    &>li {
+                                        a {
+                                            .block;
+                                            .relative;
+                                            white-space:nowrap;
+                                            padding:5px 10px 5px 30px;
+                                            font-size:14px;
+                                            color:#ccc;
+                                            .ani();
+        
+                                        }
+                                    }
                                 }
                             }
                         }
-
+    
+                        &.on,
+                        &:hover {
+                            h3 {
+                                a {
+                                    background:#000;
+                                    color:#fff;
+                                    .ani();
+                                    
+                                    &::before {
+                                        height:0;
+                                    }
+                                    
+                                    &::after {
+                                        height:0;
+                                    }
+    
+    
+                                    i {
+                                        color:@theme-color;
+                                    }
+                                }
+                            }
+    
+                        }
+    
+    
+                        &.active {
+                            h3 {
+                                a {
+                                    background:#0075bc;
+                                    color:#fff;
+                                    .ani();
+                                    
+                                    &::before {
+                                        height:0;
+                                    }
+                                    
+                                    &::after {
+                                        height:0;
+                                    }
+    
+    
+                                    i {
+                                        color:#fff;
+                                    }
+                                }
+                            }
+    
+                            &>ul {
+                                max-height:1000px;
+                                padding:10px 0;
+                                .ani();
+                                
+                                li.active {
+                                    ul {
+                                        margin:10px 0;
+                                    }
+                                }
+                                
+                            }
+                        }
                     }
-
                 }
+
             }
         }
 
