--- a/source/css/_variables.scss
+++ b/source/css/_variables.scss
@@ -66,6 +66,7 @@ $colors: map-merge(
   $colors
 );
 
+// $primary:       $blue !default;
 $primary:       $blue !default;
 $secondary:     $gray-600 !default;
 $success:       $green !default;
@@ -75,11 +76,16 @@ $danger:        $red !default;
 $light:         $gray-100 !default;
 $dark:          $gray-800 !default;
 
+
+$main-color: $blue - 30%;
+
+
+
 $theme-colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
 $theme-colors: map-merge(
   (
-    "primary":    $primary,
+    "primary":    $main-color,
     "secondary":  $secondary,
     "success":    $success,
     "info":       $info,
