--- a/source/css/bootstrap-reboot.css
+++ b/source/css/bootstrap-reboot.css
@@ -124,13 +124,13 @@ sup {
 }
 
 a {
-  color: #007bff;
+  color: #005de1;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #0056b3;
+  color: #003977;
   text-decoration: none;
 }
 
