--- a/source/css/_variables.scss
+++ b/source/css/_variables.scss
@@ -77,7 +77,7 @@ $light:         $gray-100 !default;
 $dark:          $gray-800 !default;
 
 
-$main-color: $blue - 30%;
+$main-color: $cyan - 30%;
 
 
 
@@ -647,7 +647,8 @@ $custom-file-box-shadow:            $input-box-shadow !default;
 $custom-file-button-color:          $custom-file-color !default;
 $custom-file-button-bg:             $input-group-addon-bg !default;
 $custom-file-text: (
-  en: "Browse"
+  en: "Browse",
+  ko: "파일선택"
 ) !default;
 
 
