--- a/source/css/bootstrap-reboot.css
+++ b/source/css/bootstrap-reboot.css
@@ -124,13 +124,13 @@ sup {
 }
 
 a {
-  color: #005de1;
+  color: #00849a;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #003977;
+  color: #003d47;
   text-decoration: none;
 }
 
